# GitHub.Issue.Searcher.MCP

./: .gitignore  LICENSE  README.md
faiss_mcp_server/: .env.example  main.py  pyproject.toml  requirements.txt  server.py  sync_github.py
faiss_mcp_server/tools/: faiss_tools.py  github_tools.py
faiss_mcp_server/utils/: faiss_handler.py  github_syncer.py
